last update frontend 30/8

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -4,7 +4,7 @@
   --tran: ease-in-out all 0.3s;
   --main: #037ef3;
   --main-alt: #0099e5;
-  --white: #fff;
+  --white: #ffffff;
   --black: #111;
   --gray: #999;
   --black-alt: #222;
