--- a/client/src/components/Spark/Spark.module.css
+++ b/client/src/components/Spark/Spark.module.css
@@ -4,6 +4,7 @@
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 }
 
 .user {
@@ -34,6 +35,23 @@
 
 .spark_date svg {
   font-size: 18px;
+}
+
+.spark_options {
+  position: absolute;
+  right: 0;
+  top: 60px;
+  background-color: var(--white);
+  color: var(--black);
+  border-radius: 4px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  padding: 0;
+  z-index: 100;
+  width: 200px;
+}
+
+.spark_options svg {
+  color: var(--main);
 }
 
 @media (1200px >=width >=992px) {
@@ -119,7 +137,7 @@
   }
 
   .user {
-    padding: 2px;
+    padding: 5px;
   }
 
   .avatar {
@@ -128,7 +146,7 @@
   }
 
   .spark_data {
-    padding: 2px;
+    padding: 5px;
   }
 
   .spark_date svg {
