--- a/client/src/components/Spark/Spark.module.css
+++ b/client/src/components/Spark/Spark.module.css
@@ -44,7 +44,9 @@
   background-color: var(--white);
   color: var(--black);
   border-radius: 4px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow:
+    rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   padding: 0;
   z-index: 100;
   width: 200px;
