--- a/client/src/components/TeamsGridBox/TeamsGridBox.module.css
+++ b/client/src/components/TeamsGridBox/TeamsGridBox.module.css
@@ -2,8 +2,8 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
-.not_teams{
-  color: rgb(3, 126, 243,0.5)
+.not_teams {
+  color: rgb(3, 126, 243, 0.5);
 }
 
 @media (max-width: 768px) {
