--- a/client/src/app/app.css
+++ b/client/src/app/app.css
@@ -40,6 +40,27 @@
   font-size: 18px !important;
 }
 
+
+.carousel-root, .carousel-slider, .slider-wrapper, .slider-wrapper ul, .carousel-root .slide {
+  height: 100%;
+  max-height: 100% !important;
+  max-width: 100% !important;
+}
+
+.carousel-root .slide div {
+  height: 100%;
+  width: 100%;
+}
+
+.carousel-root .slide img {
+  width: auto !important;
+  height: 100%;
+}
+
+.carousel-root .control-arrow {
+  background-color: var(--main) !important;
+}
+
 @media (max-width: 1200px) {
   .css-bbskgl-MuiFormLabel-root-MuiInputLabel-root {
     font-size: 16px;
