--- a/client/src/components/CarouselSlider/CarouselSlider.module.css
+++ b/client/src/components/CarouselSlider/CarouselSlider.module.css
@@ -8,78 +8,12 @@
   transform: translate(-50%, -50%);
   background-color: var(--white);
   border-radius: 10px;
+  overflow: hidden;
+  grid-template-rows: auto 1fr;
 }
 
 .modal_carousel>button {
-  position: absolute;
-  top: 20px;
-  left: 20px;
   border-radius: 50%;
   width: 50px;
   height: 50px;
-}
-
-.modal_carouse div div div,
-.modal_carousel div div ul {
-  height: 100%;
-  width: 100% !important;
-}
-
-.modal_carousel  div div button {
-  background-color: var(--main) !important;
-}
-
-.modal_carousel div:nth-child(2) div:first-child>ul {
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-}
-
-.modal_carousel div:nth-child(2) div:first-child>ul li {
-  background-color: var(--main);
-  width: 10px;
-  height: 10px;
-}
-
-.modal_carousel .control-dots .dot {
-  background: var(--main) !important;
-}
-
-.image_box {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.image_box::after {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  color: var(--white);
-  z-index: 4;
-  font-size: 20px;
-}
-
-.image_box .overlay {
-  z-index: 3;
-}
-
-.image_box img {
-  width: auto !important;
-  height: 100%;
-  z-index: 2;
-}
-
-.back_img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  filter: grayscale(60%) blur(5px);
 }
