--- a/client/src/components/UserBack/UserBack.module.css
+++ b/client/src/components/UserBack/UserBack.module.css
@@ -2,40 +2,55 @@
   width: 100%;
   height: 300px;
   position: relative;
+  cursor: pointer;
+}
+
+.cover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  top: 0;
+}
+
+.user_back .overlay {
+  opacity: 0 !important;
+}
+
+.user_back:hover .overlay {
+  opacity: 1 !important;
 }
 
 .change_cover_button {
   position: absolute;
-  right: 120px;
+  right: 180px;
   top: 20px;
 }
 
-@media (1200px >= width >=992px) {
+@media (1200px >=width >=992px) {
   .user_back {
     height: 280px;
   }
 
   .change_cover_button {
-    right: 30px;
-    top: 20px;
+    right: 20px;
   }
 }
 
-@media (992px >= width >= 768px) {
+@media (992px >=width >=768px) {
   .user_back {
     height: 260px;
   }
 
   .change_cover_button {
-    right: 30px;
-    top: 20px;
+    right: 20px;
   }
 }
 
-@media (768px >= width >= 0px) {
+@media (768px >=width >=0px) {
   .user_back {
     height: 240px;
   }
