--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -109,10 +109,10 @@ form {
     width: 98vw;
     grid-template-columns: repeat(1, 1fr);
   }
-
+/* 
   form > div:last-child {
     order: -1;
-  }
+  } */
 
   .team_form {
     width: 90vw;
