--- a/client/src/components/TeamBox/TeamBox.module.css
+++ b/client/src/components/TeamBox/TeamBox.module.css
@@ -4,6 +4,8 @@
   box-shadow:
     rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  position: relative;
+  z-index: 10;
 }
 
 .room_image_box {
