--- a/client/src/components/CarouselSlider/CarouselSlider.module.css
+++ b/client/src/components/CarouselSlider/CarouselSlider.module.css
@@ -17,3 +17,17 @@
   width: 50px;
   height: 50px;
 }
+
+@media (max-width:640px) {
+  .modal_carousel {
+    height: 90vh;
+    width: 90vw;
+    padding: 20px;
+    border-radius: 4px;
+  }
+  
+  .modal_carousel>button {
+    width: 30px;
+    height: 30px;
+  }
+}
