--- a/client/src/components/Spark/Spark.module.css
+++ b/client/src/components/Spark/Spark.module.css
@@ -1,10 +1,9 @@
 .spark {
-  box-shadow:
-    rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   border-radius: 10px;
   overflow: hidden;
   position: relative;
+  border-width: 2px;
+  border-style: solid;
 }
 
 .user {
@@ -54,6 +53,14 @@
 
 .spark_options svg {
   color: var(--main);
+}
+.loading_spark_data span{
+  width:800px;
+  height: 50px;
+}
+
+.loading_spark_data span:nth-child(2){
+  height: 200px;
 }
 
 @media (1200px >=width >=992px) {
