--- a/client/src/components/UserInfo/UserInfo.module.css
+++ b/client/src/components/UserInfo/UserInfo.module.css
@@ -1,7 +1,8 @@
-.user_about_box {
+.user_info_box {
   padding: 10px;
   box-shadow:
     rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   border-radius: 4px;
+  word-break: break-all;
 }
