--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -6,12 +6,16 @@ form {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background-color: var(--white);
   border-radius: 10px;
   overflow: hidden;
+  background-color: var(--white);
   box-shadow:
     rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
     rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+
+.border_none {
+  border: none !important;
 }
 
 .edit_profile_box {
@@ -109,7 +113,8 @@ form {
     width: 98vw;
     grid-template-columns: repeat(1, 1fr);
   }
-/* 
+
+  /* 
   form > div:last-child {
     order: -1;
   } */
