--- a/client/src/components/Models/Models.module.css
+++ b/client/src/components/Models/Models.module.css
@@ -1,5 +1,4 @@
 .modal_box {
-  background-color: var(--white);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -7,6 +6,8 @@
   padding: 20px;
   border-radius: 6px;
   max-width: 60vw;
+  border-width: 2px;
+  border-style: solid;
 }
 
 .avatar_box {
@@ -24,16 +25,17 @@
 
 .chosen_data_viewer_box {
   max-height: 90vh;
-  height: fit-content;
+  height: max-content;
   width: 90vw;
   padding: 20px;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background-color: var(--white);
   border-radius: 10px;
   overflow: hidden;
+  border-width: 2px;
+  border-style: solid;
 }
 
 .data_viewer {
@@ -58,6 +60,25 @@
   height: 20px;
 }
 
+.modal_carousel {
+  height: 90vh;
+  width: 90vw;
+  padding: 20px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--white);
+  border-radius: 10px;
+  overflow: hidden;
+  grid-template-rows: auto 1fr;
+}
+
+.modal_carousel>button {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
 
 @media (1200px >=width >=992px) {
   .modal_box {
@@ -101,5 +122,17 @@
 
   .data_viewer {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .modal_carousel {
+    height: 90vh;
+    width: 90vw;
+    padding: 20px;
+    border-radius: 4px;
+  }
+
+  .modal_carousel>button {
+    width: 30px;
+    height: 30px;
   }
 }
