--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,7 +1,8 @@
 :root {
   --ubuntu-font: "Ubuntu", sans-serif;
-  --cairo-font: "Cairo", sans-serif;
+  --cairo-font: 'Cairo', sans-serif;
   --tran: ease-in-out all 0.3s;
+  --box_shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   --main: #037ef3;
   --main-alt: #0099e5;
   --white: #ffffff;
@@ -126,7 +127,7 @@ a {
   text-transform: capitalize !important;
 }
 
-.center_x{
+.center_x {
   left: 50%;
   transform: translateX(-50%);
 }
