--- a/client/src/components/MembersBox/MembersBox.module.css
+++ b/client/src/components/MembersBox/MembersBox.module.css
@@ -1,10 +1,19 @@
 .members_box {
-  border: 1px solid var(--gray);
-  width: -moz-fit-content;
-  width: fit-content;
-  position: sticky;
-  top: 80px;
-  background-color: var(--white);
+  width: max-content;
+  border-radius: 4px;
+}
+
+.members_box_summary {
+  height: min-content !important;
+  min-height: min-content !important;
+  padding: 10px;
+}
+
+.members_box_summary>div {
+  margin: 0 !important;
+  justify-content: stretch;
+  display: flex;
+  width: max-content;
 }
 
 .members {
@@ -21,20 +30,12 @@
 }
 
 @media (1200px >=width >=992px) {
-  .members_box {
-    top: 70px;
-  }
-
   .members {
     padding: 18px;
   }
 }
 
 @media (992px > width >=768px) {
-  .members_box {
-    top: 60px;
-  }
-
   .members {
     padding: 16px;
   }
@@ -42,13 +43,11 @@
 
 @media (768px > width >=0) {
   .members_box {
-    top: auto;
     position: relative;
     width: 100%;
   }
 
   .members {
     padding: 15px;
-    /* justify-content: center !important; */
   }
 }
