--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -68,13 +68,18 @@ form {
   color: var(--main);
 }
 
+.smile_icon {
+  font-size: 25px;
+}
+
 @media (max-width: 1200px) {
   form {
     width: 85vw;
     border-radius: 8px;
   }
 
-  .team_form {
+  .team_form,
+  .profile_form {
     width: 70vw;
     padding: 18px;
   }
@@ -86,6 +91,11 @@ form {
   .add_new_team_title svg {
     font-size: 35px;
   }
+
+
+  .smile_icon {
+    font-size: 22px;
+  }
 }
 
 @media (max-width: 992px) {
@@ -94,7 +104,8 @@ form {
     border-radius: 6px;
   }
 
-  .team_form {
+  .team_form,
+  .profile_form {
     width: 80vw;
     padding: 15px;
   }
@@ -106,20 +117,20 @@ form {
   .add_new_team_title svg {
     font-size: 35px;
   }
+
+  .smile_icon {
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 768px) {
   form {
-    width: 98vw;
+    width: 96vw;
     grid-template-columns: repeat(1, 1fr);
   }
 
-  /* 
-  form > div:last-child {
-    order: -1;
-  } */
-
-  .team_form {
+  .team_form,
+  .profile_form {
     width: 90vw;
     padding: 10px;
   }
@@ -130,5 +141,9 @@ form {
 
   .add_new_team_title svg {
     font-size: 30px;
+  }
+
+  .smile_icon {
+    font-size: 18px;
   }
 }
