--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -205,6 +205,7 @@ a {
   .g50 {
     gap: 40px !important;
   }
+
 }
 
 @media (max-width: 768px) {
@@ -235,5 +236,11 @@ a {
 
   .g50 {
     gap: 30px !important;
+  }
+
+
+  audio {
+    width: 200px;
+    height: 40px;
   }
 }
