--- a/client/src/components/Head/Head.module.css
+++ b/client/src/components/Head/Head.module.css
@@ -22,6 +22,7 @@
   height: 4px;
   left: 0;
   border-radius: 2px;
+  background-color: var(--main);
 }
 
 .head_special::before {
@@ -32,6 +33,7 @@
   height: 4px;
   left: 30%;
   border-radius: 2px;
+  background-color: var(--main);
 }
 
 @media (992px > width >=0) {
