--- a/client/src/components/SpecialImage/SpecialImage.module.css
+++ b/client/src/components/SpecialImage/SpecialImage.module.css
@@ -21,18 +21,7 @@
 }
 
 .image_box img {
-  width: auto;
+  width: 100%;
+  height: auto;
   z-index: 2;
 }
-
-/* .back_img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  filter: grayscale(50%) blur(2px);
-  background-color: var(--black);
-} */
