--- a/client/src/components/TeamBox/TeamBox.module.css
+++ b/client/src/components/TeamBox/TeamBox.module.css
@@ -28,3 +28,24 @@
 .room_description {
   line-height: 25px;
 }
+
+@media (max-width:1200px) {
+  .room_data {
+    padding: 16px;
+  }
+
+}
+
+@media (max-width:992px) {
+  .room_data {
+    padding: 10px;
+  }
+
+}
+
+@media (max-width:768px) {
+  .room_data {
+    padding: 8px;
+  }
+
+}
