last update for client

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -98,6 +98,10 @@ main {
   height: auto;
 }
 
+.css-1ontqvh{
+  position: absolute !important;
+}
+
 /*End Error Page*/
 @media (max-width: 1200px) {
   .css-bbskgl-MuiFormLabel-root-MuiInputLabel-root {
