fixing and changing

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -98,11 +98,11 @@ main {
   height: auto;
 }
 
+
+/*Handle Vercel*/
 .css-1ontqvh.Spark_spark_options__yr3G8 {
   position: absolute !important;
 }
-
-
 
 
 
