--- a/client/src/components/Spark/Spark.module.css
+++ b/client/src/components/Spark/Spark.module.css
@@ -48,7 +48,7 @@
 
 
 .spark_options {
-  position: absolute;
+  position: absolute !important;
   right: 0;
   top: 60px;
   background-color: var(--white);
