--- a/client/src/components/User/UserBack/UserBack.module.css
+++ b/client/src/components/User/UserBack/UserBack.module.css
@@ -25,9 +25,9 @@
 }
 
 .change_cover_button {
-  position: absolute;
-  right: 180px;
-  top: 20px;
+  position: absolute !important;
+  right: 180px !important;
+  top: 20px !important;
 }
 
 @media (1200px >=width >=992px) {
@@ -36,7 +36,7 @@
   }
 
   .change_cover_button {
-    right: 20px;
+    right: 20px !important;
   }
 }
 
@@ -46,7 +46,7 @@
   }
 
   .change_cover_button {
-    right: 20px;
+    right: 20px !important;
   }
 }
 
@@ -56,6 +56,6 @@
   }
 
   .change_cover_button {
-    right: 20px;
+    right: 20px !important;
   }
 }
