--- a/client/src/components/User/UserBox/UserBox.module.css
+++ b/client/src/components/User/UserBox/UserBox.module.css
@@ -26,13 +26,13 @@
 }
 
 .change_avatar_button {
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-  padding: 10px;
-  position: absolute;
-  bottom: 25%;
-  right: 0%;
+  border-radius: 50% !important;
+  height: 40px !important;
+  width: 40px !important;
+  padding: 10px !important;
+  position: absolute !important;
+  bottom: 25% !important;
+  right: 0% !important;
 }
 
 @media (1200px >=width >=992px) {
