--- a/client/src/sections/TeamSection/TeamSection.module.css
+++ b/client/src/sections/TeamSection/TeamSection.module.css
@@ -21,9 +21,9 @@
 }
 
 .change_cover_button {
-  position: absolute;
-  right: 180px;
-  top: 20px;
+  position: absolute !important;
+  right: 180px !important;
+  top: 20px !important;
 }
 
 @media (1200px >=width >=992px) {
@@ -42,7 +42,7 @@
   }
 
   .change_cover_button {
-    right: 20px;
+    right: 20px !important;
   }
 }
 
@@ -62,8 +62,8 @@
   }
 
   .change_cover_button {
-    right: 20px;
-    top: 15px;
+    right: 20px !important;
+    top: 15px !important;
   }
 }
 
@@ -87,8 +87,8 @@
   }
 
   .change_cover_button {
-    right: 20px;
-    top: 10px
+    right: 20px !important;
+    top: 10px !important;
   }
 }
 
@@ -112,7 +112,7 @@
   }
 
   .change_cover_button {
-    right: 10px;
-    top: 5px;
+    right: 10px !important;
+    top: 5px !important;
   }
 }
