--- a/client/src/components/LoadingIcon/LoadingIcon.module.css
+++ b/client/src/components/LoadingIcon/LoadingIcon.module.css
@@ -4,6 +4,7 @@
   animation-fill-mode: both;
   animation-iteration-count: infinite;
   font-size: 35px !important;
+  position: relative;
 }
 
 @keyframes rotate {
