--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -2,7 +2,7 @@ form {
   grid-template-columns: repeat(2, 1fr);
   width: 80vw;
   height: fit-content;
-  position: absolute;
+  position: relative;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -12,6 +12,13 @@ form {
   box-shadow:
     rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
     rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+
+.auth_form{
+  top: auto !important;
+  left: auto !important;
+  transform: none !important;
+  position: relative !important;
 }
 
 .border_none {
