fix teamBox Image

--- a/client/src/components/TeamBox/TeamBox.module.css
+++ b/client/src/components/TeamBox/TeamBox.module.css
@@ -10,6 +10,9 @@
   overflow: hidden;
   position: relative;
   width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .room_image_box img {
